--- a/Dockerfile-1
+++ b/Dockerfile-1
@@ -24,8 +24,7 @@ WORKDIR /app
 
 COPY --from=builder /build/Auto-GPT/ /app
 
-RUN
-    pip install --no-cache-dir -r requirements.txt && \
+RUN pip install --no-cache-dir -r requirements.txt && \
     mkdir /logs
 
 
