--- a/Dockerfile-1
+++ b/Dockerfile-1
@@ -26,7 +26,8 @@ ADD . $WORKDIR
 
 #COPY --from=builder /build/Auto-GPT/ /app/
 
-RUN pip install --no-cache-dir -r requirements.txt 
+RUN pip install --upgrade pip \
+    && pip install --no-cache-dir -r requirements.txt 
 
 
 EXPOSE 8080
