--- a/.github/workflows/docker-ci.yaml
+++ b/.github/workflows/docker-ci.yaml
@@ -39,7 +39,7 @@ jobs:
           context: .
           push: true
           file: ./Dockerfile-1
-          #platforms: linux/arm64 ,linux/amd64
-          platforms: linux/amd64
+          platforms: linux/arm64 ,linux/amd64
+          #platforms: linux/amd64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
